use java 15 methods.